--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -123,7 +123,7 @@ mysql_users: []
 mysql_server_id: "1"
 mysql_max_binlog_size: "100M"
 mysql_binlog_format: "ROW"
-mysql_expire_logs_days: "10"
+mysql_expire_logs_seconds: "2592000"
 mysql_replication_role: ''
 mysql_replication_master: ''
 # Same keys as `mysql_users` above.
