--- a/tasks/replication.yml
+++ b/tasks/replication.yml
@@ -14,7 +14,7 @@
 
 - name: Check slave replication status.
   mysql_replication:
-    mode: getslave
+    mode: getreplica
     login_user: "{{ mysql_replication_user.name }}"
     login_password: "{{ mysql_replication_user.password }}"
   ignore_errors: true
@@ -25,7 +25,7 @@
   tags: ['skip_ansible_galaxy']
 
 - name: Check master replication status.
-  mysql_replication: mode=getmaster
+  mysql_replication: mode=getprimary
   delegate_to: "{{ mysql_replication_master }}"
   register: master
   when:
@@ -36,7 +36,7 @@
 
 - name: Configure replication on the slave.
   mysql_replication:
-    mode: changemaster
+    mode: changeprimary
     master_host: "{{ mysql_replication_master }}"
     master_user: "{{ mysql_replication_user.name }}"
     master_password: "{{ mysql_replication_user.password }}"
@@ -50,7 +50,7 @@
     - (mysql_replication_master | length) > 0
 
 - name: Start replication.
-  mysql_replication: mode=startslave
+  mysql_replication: mode=startreplica
   when:
     - (slave.Is_Slave is defined and not slave.Is_Slave) or (slave.Is_Slave is not defined and slave is failed)
     - mysql_replication_role == 'slave'
